update on resize and mount

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,4 @@
 body {
-  margin: 0;
-}
-
-.app {
   margin: 16px;
 }
 
@@ -20,5 +16,5 @@ body {
   height: 280px;
   object-fit: cover;
   border-radius: 16px;
-  scroll-snap-align: start;
+  scroll-snap-align: start; /* TODO: prevent scrolling to placeholders? */
 }
