--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,9 @@ body {
 }
 
 .wrapper {
-  --height: 280px;
-  --paddingWidth: 128px;
-  --gapWidth: 32px;
+  --height: 280px; /* the total height of the component */
+  --paddingWidth: 128px; /* the empty space left of the first item */
+  --gapWidth: 32px; /* the gap between two items */
   height: var(--height);
 }
 
@@ -31,14 +31,20 @@ body {
 
 .item-wrapper {
   scroll-snap-align: start;
+  /* add padding to offset the scroll snap point */
   padding-left: var(--paddingWidth);
+  /* add negative margin to negate the padding */
   margin-left: calc(-1 * var(--paddingWidth));
 }
 
 .item-wrapper:first-of-type {
+  /* don't add negative margin on the first item to create empty space */
   margin-left: 0;
 }
 
 .item-wrapper:last-of-type {
+  /* add some padding on the right to make scrolling to the last page possible */
+  /* FIXME: can't actually reach the last page */
+  /* TODO: add padding on either side as a "damper" */
   padding-right: var(--gapWidth);
 }
