--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 body {
   margin: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .wrapper {
@@ -47,4 +49,14 @@ body {
   /* FIXME: can't actually reach the last page */
   /* TODO: add padding on either side as a "damper" */
   padding-right: var(--gapWidth);
+}
+
+.controls {
+  display: flex;
+  justify-content: center;
+  margin: 16px 0;
+}
+
+.controls > span {
+  margin: 0 8px;
 }
