--- a/src/styles.css
+++ b/src/styles.css
@@ -1,37 +1,39 @@
 body {
-  margin: 16px;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.wrapper {
-  --height: 280px; /* the total height of the component */
-  --paddingLeft: 128px; /* the empty space left of the first item */
-  --gapWidth: 32px; /* the gap between two items */
-  height: var(--height); /* TODO: dynamic height */
+main {
+  background: paleturquoise;
+  margin: 16px 128px;
 }
 
 .container {
-  box-sizing: border-box;
-  position: absolute;
-  left: 0;
+  /* Position the element across the full view width  */
+  /* This only works when the parent element is centered in the view */
+  position: relative;
+  left: calc(50% - 50vw);
   width: 100vw;
+  box-sizing: border-box;
+
+  --paddingLeft: 128px; /* the empty space left of the first item */
   padding-left: var(--paddingLeft);
   padding-bottom: 16px;
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: min-content;
-  column-gap: var(--gapWidth);
+  column-gap: 32px;
   overflow: auto hidden;
   scroll-snap-type: x mandatory;
 }
 
 .item {
   width: 280px;
-  height: var(--height);
+  height: 280px;
   object-fit: cover;
   border-radius: 16px;
-  border: 1px solid gainsboro;
+  border: 1px solid gray;
 
   /* experimental: try to make at least one item fit the view */
   /* max-width: calc(100vw - var(--paddingWidth) - var(--gapWidth));
