--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,10 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* TODO: might want overflow-x hidden to avoid horizontal scrollbar */
+  /* when vertical scrollbar appears (due to elements having 100vw). */
+  /* seems like this exposes an issue with our code which breaks the */
+  /* alignment in such cases */
 }
 
 main {
@@ -47,6 +51,7 @@ main {
 }
 
 .item-wrapper {
+  /* TODO: use scroll-padding??? */
   scroll-snap-align: start;
   /* offset the scroll snap point without moving the item*/
   padding-left: var(--paddingWidth);
